@@ -299,10 +299,10 @@ COPYING.Z	   = WHITE;;
 [SR]MAIL*	   = WHITE;;
 INBOX*	   	   = WHITE;;
 OUTBOX*	   	   = WHITE;;
-*.pgp		   = BLACK;;
-*.pgp.[bg]z	   = BLACK;;
-*.pgp.bz2	   = BLACK;;
-*.pgp.Z		   = BLACK;;
+*.pgp		   = RED;;OFF
+*.pgp.[bg]z	   = RED;;OFF
+*.pgp.bz2	   = RED;;OFF
+*.pgp.Z		   = RED;;OFF
 *.ps		   = MAGENTA;; ON
 *.ps.[bg]z	   = MAGENTA;; ON
 *.ps.bz2	   = MAGENTA;; ON
@@ -415,30 +415,30 @@ OUTBOX*	   	   = WHITE;;
 *.fts.[bg]z	   = MAGENTA;; ON
 *.fts.bz2	   = MAGENTA;; ON
 *.fts.Z		   = MAGENTA;; ON
-*.mov		   = BLACK;;
-*.mov.[bg]z	   = BLACK;;
-*.mov.bz2	   = BLACK;;
-*.mov.Z		   = BLACK;;
-*.mpg		   = BLACK;;
-*.mpg.[bg]z	   = BLACK;;
-*.mpg.bz2	   = BLACK;;
-*.mpg.Z		   = BLACK;;
-*.mpeg		   = BLACK;;
-*.mpeg.[bg]z	   = BLACK;;
-*.mpeg.bz2	   = BLACK;;
-*.mpeg.Z	   = BLACK;;
-*.avi		   = BLACK;;
-*.avi.[bg]z	   = BLACK;;
-*.avi.bz2	   = BLACK;;
-*.avi.Z		   = BLACK;;
-*.fli		   = BLACK;;
-*.fli.[bg]z	   = BLACK;;
-*.fli.bz2	   = BLACK;;
-*.fli.Z		   = BLACK;;
-*.flc		   = BLACK;;
-*.flc.[bg]z	   = BLACK;;
-*.flc.bz2	   = BLACK;;
-*.flc.Z		   = BLACK;;
+*.mov		   = RED;;OFF
+*.mov.[bg]z	   = RED;;OFF
+*.mov.bz2	   = RED;;OFF
+*.mov.Z		   = RED;;OFF
+*.mpg		   = RED;;OFF
+*.mpg.[bg]z	   = RED;;OFF
+*.mpg.bz2	   = RED;;OFF
+*.mpg.Z		   = RED;;OFF
+*.mpeg		   = RED;;OFF
+*.mpeg.[bg]z	   = RED;;OFF
+*.mpeg.bz2	   = RED;;OFF
+*.mpeg.Z	   = RED;;OFF
+*.avi		   = RED;;OFF
+*.avi.[bg]z	   = RED;;OFF
+*.avi.bz2	   = RED;;OFF
+*.avi.Z		   = RED;;OFF
+*.fli		   = RED;;OFF
+*.fli.[bg]z	   = RED;;OFF
+*.fli.bz2	   = RED;;OFF
+*.fli.Z		   = RED;;OFF
+*.flc		   = RED;;OFF
+*.flc.[bg]z	   = RED;;OFF
+*.flc.bz2	   = RED;;OFF
+*.flc.Z		   = RED;;OFF
 *.au		   = CYAN;; ON
 *.au.[bg]z	   = CYAN;; ON
 *.au.bz2	   = CYAN;; ON
