@@ -736,66 +736,66 @@ OUTBOX*		   = WHITE;;
 *.g3.[bg]z	   = MAGENTA;; ON
 *.g3.bz2	   = MAGENTA;; ON
 *.g3.Z		   = MAGENTA;; ON
-*.mov		   = BLACK;;ON
-*.mov.[bg]z	   = BLACK;;ON
-*.mov.bz2	   = BLACK;;ON
-*.mov.Z		   = BLACK;;ON
-*.mp[4g]	   = BLACK;;ON
-*.mp[4g].[bg]z	   = BLACK;;ON
-*.mp[4g].bz2	   = BLACK;;ON
-*.mp[4g].Z	   = BLACK;;ON
-*.mpeg		   = BLACK;;ON
-*.mpeg.[bg]z	   = BLACK;;ON
-*.mpeg.bz2	   = BLACK;;ON
-*.mpeg.Z	   = BLACK;;ON
-*.avi		   = BLACK;;ON
-*.avi.[bg]z	   = BLACK;;ON
-*.avi.bz2	   = BLACK;;ON
-*.avi.Z		   = BLACK;;ON
-*.fli		   = BLACK;;ON
-*.fli.[bg]z	   = BLACK;;ON
-*.fli.bz2	   = BLACK;;ON
-*.fli.Z		   = BLACK;;ON
-*.flc		   = BLACK;;ON
-*.flc.[bg]z	   = BLACK;;ON
-*.flc.bz2	   = BLACK;;ON
-*.flc.Z		   = BLACK;;ON
-*.3gp		   = BLACK;;ON
-*.3gp.[bg]z	   = BLACK;;ON
-*.3gp.bz2	   = BLACK;;ON
-*.3gp.Z		   = BLACK;;ON
-*.cam		   = BLACK;;ON
-*.cam.[bg]z	   = BLACK;;ON
-*.cam.bz2	   = BLACK;;ON
-*.cam.Z		   = BLACK;;ON
-*.dat		   = BLACK;;ON
-*.dat.[bg]z	   = BLACK;;ON
-*.dat.bz2	   = BLACK;;ON
-*.dat.Z		   = BLACK;;ON
-*.divx		   = BLACK;;ON
-*.divx.[bg]z	   = BLACK;;ON
-*.divx.bz2	   = BLACK;;ON
-*.divx.Z	   = BLACK;;ON
-*.flv		   = BLACK;;ON
-*.flv.[bg]z	   = BLACK;;ON
-*.flv.bz2	   = BLACK;;ON
-*.flv.Z		   = BLACK;;ON
-*.mkv		   = BLACK;;ON
-*.mkv.[bg]z	   = BLACK;;ON
-*.mkv.bz2	   = BLACK;;ON
-*.mkv.Z		   = BLACK;;ON
-*.ogm		   = BLACK;;ON
-*.ogm.[bg]z	   = BLACK;;ON
-*.ogm.bz2	   = BLACK;;ON
-*.ogm.Z		   = BLACK;;ON
-*.swf		   = BLACK;;ON
-*.swf.[bg]z	   = BLACK;;ON
-*.swf.bz2	   = BLACK;;ON
-*.swf.Z		   = BLACK;;ON
-*.wmv		   = BLACK;;ON
-*.wmv.[bg]z	   = BLACK;;ON
-*.wmv.bz2	   = BLACK;;ON
-*.wmv.Z		   = BLACK;;ON
+*.mov		   = RED;;OFF
+*.mov.[bg]z	   = RED;;OFF
+*.mov.bz2	   = RED;;OFF
+*.mov.Z		   = RED;;OFF
+*.mp[4g]	   = RED;;OFF
+*.mp[4g].[bg]z	   = RED;;OFF
+*.mp[4g].bz2	   = RED;;OFF
+*.mp[4g].Z	   = RED;;OFF
+*.mpeg		   = RED;;OFF
+*.mpeg.[bg]z	   = RED;;OFF
+*.mpeg.bz2	   = RED;;OFF
+*.mpeg.Z	   = RED;;OFF
+*.avi		   = RED;;OFF
+*.avi.[bg]z	   = RED;;OFF
+*.avi.bz2	   = RED;;OFF
+*.avi.Z		   = RED;;OFF
+*.fli		   = RED;;OFF
+*.fli.[bg]z	   = RED;;OFF
+*.fli.bz2	   = RED;;OFF
+*.fli.Z		   = RED;;OFF
+*.flc		   = RED;;OFF
+*.flc.[bg]z	   = RED;;OFF
+*.flc.bz2	   = RED;;OFF
+*.flc.Z		   = RED;;OFF
+*.3gp		   = RED;;OFF
+*.3gp.[bg]z	   = RED;;OFF
+*.3gp.bz2	   = RED;;OFF
+*.3gp.Z		   = RED;;OFF
+*.cam		   = RED;;OFF
+*.cam.[bg]z	   = RED;;OFF
+*.cam.bz2	   = RED;;OFF
+*.cam.Z		   = RED;;OFF
+*.dat		   = RED;;OFF
+*.dat.[bg]z	   = RED;;OFF
+*.dat.bz2	   = RED;;OFF
+*.dat.Z		   = RED;;OFF
+*.divx		   = RED;;OFF
+*.divx.[bg]z	   = RED;;OFF
+*.divx.bz2	   = RED;;OFF
+*.divx.Z	   = RED;;OFF
+*.flv		   = RED;;OFF
+*.flv.[bg]z	   = RED;;OFF
+*.flv.bz2	   = RED;;OFF
+*.flv.Z		   = RED;;OFF
+*.mkv		   = RED;;OFF
+*.mkv.[bg]z	   = RED;;OFF
+*.mkv.bz2	   = RED;;OFF
+*.mkv.Z		   = RED;;OFF
+*.ogm		   = RED;;OFF
+*.ogm.[bg]z	   = RED;;OFF
+*.ogm.bz2	   = RED;;OFF
+*.ogm.Z		   = RED;;OFF
+*.swf		   = RED;;OFF
+*.swf.[bg]z	   = RED;;OFF
+*.swf.bz2	   = RED;;OFF
+*.swf.Z		   = RED;;OFF
+*.wmv		   = RED;;OFF
+*.wmv.[bg]z	   = RED;;OFF
+*.wmv.bz2	   = RED;;OFF
+*.wmv.Z		   = RED;;OFF
 *.au		   = CYAN;; ON
 *.au.[bg]z	   = CYAN;; ON
 *.au.bz2	   = CYAN;; ON
